objects/Exam_Score__c.object
<CustomObject>
    <fields>
        <fullName>Exercise__c</fullName>
        <label>Exercise</label>
        <referenceTo>Exercise__c</referenceTo>
        <relationshipLabel>Exam Scores</relationshipLabel>
        <relationshipName>Exam_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Points__c</fullName>
        <label>Total Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Exam_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maxPossibleScore__c</fullName>
        <label>maxPossibleScore</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Exam Score</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ES-{0000}</displayFormat>
        <label>Exam Score Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exam Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>